removing is added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       <div class="modal-wrapper">
         <div class="modal">
           <img id="close-btn" src="images/close.png" alt="" />
+          <div class="modal-list"></div>
+
+          <div class="total">
+            Sum:
+            <span id="modal-info"> </span> $
+          </div>
         </div>
       </div>
     </main>
